--- a/MPfm/MPfm.Mac/Windows/XIB/MainWindow.xib
+++ b/MPfm/MPfm.Mac/Windows/XIB/MainWindow.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1080</int>
-		<string key="IBDocument.SystemVersion">12C54</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
-		<string key="IBDocument.AppKitVersion">1187.34</string>
-		<string key="IBDocument.HIToolboxVersion">625.00</string>
+		<string key="IBDocument.SystemVersion">12D78</string>
+		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
+		<string key="IBDocument.AppKitVersion">1187.37</string>
+		<string key="IBDocument.HIToolboxVersion">626.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">2840</string>
+			<string key="NS.object.0">3084</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -88,6 +88,7 @@
 							<string>09681CBF-F7D0-4EE5-B40C-C3019E0327A9</string>
 							<string>14162B79-0D28-4972-9806-13455B3BA29E</string>
 							<string>1618D175-9D4C-433B-A77B-410FD6EB86F9</string>
+							<string>1FC2ACC1-978C-4835-AF70-D877E2759D52</string>
 							<string>74424AB4-EEB0-4C4F-A627-C2213D6D52A2</string>
 							<string>74A85E52-F367-4B14-B354-1F060557BCBE</string>
 							<string>890FB683-7AC0-4914-A3A9-74744A0849E3</string>
@@ -149,6 +150,25 @@
 								</object>
 								<string key="NSToolbarItemLabel">Effects</string>
 								<string key="NSToolbarItemPaletteLabel">Effects</string>
+								<string key="NSToolbarItemToolTip"/>
+								<nil key="NSToolbarItemView"/>
+								<reference key="NSToolbarItemImage" ref="653864281"/>
+								<nil key="NSToolbarItemTarget"/>
+								<nil key="NSToolbarItemAction"/>
+								<string key="NSToolbarItemMinSize">{0, 0}</string>
+								<string key="NSToolbarItemMaxSize">{0, 0}</string>
+								<bool key="NSToolbarItemEnabled">YES</bool>
+								<bool key="NSToolbarItemAutovalidates">YES</bool>
+								<int key="NSToolbarItemTag">-1</int>
+								<bool key="NSToolbarIsUserRemovable">YES</bool>
+								<int key="NSToolbarItemVisibilityPriority">0</int>
+							</object>
+							<object class="NSToolbarItem" id="841298689">
+								<object class="NSMutableString" key="NSToolbarItemIdentifier">
+									<characters key="NS.bytes">1FC2ACC1-978C-4835-AF70-D877E2759D52</characters>
+								</object>
+								<string key="NSToolbarItemLabel">Sync Devices</string>
+								<string key="NSToolbarItemPaletteLabel">Sync Devices</string>
 								<string key="NSToolbarItemToolTip"/>
 								<nil key="NSToolbarItemView"/>
 								<reference key="NSToolbarItemImage" ref="653864281"/>
@@ -403,7 +423,7 @@
 							</object>
 						</object>
 					</object>
-					<object class="NSArray" key="NSToolbarIBAllowedItems">
+					<object class="NSMutableArray" key="NSToolbarIBAllowedItems">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<reference ref="138611742"/>
 						<reference ref="797602594"/>
@@ -419,8 +439,9 @@
 						<reference ref="132600826"/>
 						<reference ref="134700849"/>
 						<reference ref="271922043"/>
+						<reference ref="841298689"/>
 					</object>
-					<object class="NSArray" key="NSToolbarIBDefaultItems">
+					<object class="NSMutableArray" key="NSToolbarIBDefaultItems">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<reference ref="1054465936"/>
 						<reference ref="138611742"/>
@@ -436,6 +457,7 @@
 						<reference ref="134700849"/>
 						<reference ref="132600826"/>
 						<reference ref="271922043"/>
+						<reference ref="841298689"/>
 					</object>
 					<object class="NSArray" key="NSToolbarIBSelectableItems" id="0">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -4262,6 +4284,14 @@
 					<int key="connectionID">777</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">actionOpenSyncWindow:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="841298689"/>
+					</object>
+					<int key="connectionID">780</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">Toolbar</string>
 						<reference key="source" ref="748157544"/>
@@ -4956,6 +4986,7 @@
 							<reference ref="271922043"/>
 							<reference ref="717299365"/>
 							<reference ref="958550511"/>
+							<reference ref="841298689"/>
 						</object>
 						<reference key="parent" ref="748157544"/>
 					</object>
@@ -6832,6 +6863,11 @@
 						<reference key="object" ref="422722297"/>
 						<reference key="parent" ref="593538448"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">778</int>
+						<reference key="object" ref="841298689"/>
+						<reference key="parent" ref="820365223"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -7163,6 +7199,8 @@
 					<string>77.designableToolbarItemIdentifier</string>
 					<string>775.IBPluginDependency</string>
 					<string>776.IBPluginDependency</string>
+					<string>778.IBPluginDependency</string>
+					<string>778.designableToolbarItemIdentifier</string>
 					<string>78.IBPluginDependency</string>
 					<string>78.designableToolbarItemIdentifier</string>
 					<string>79.IBPluginDependency</string>
@@ -7557,6 +7595,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>toolbarSync</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>toolbarEffects</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>toolbarPlaylist</string>
@@ -7586,7 +7626,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">777</int>
+			<int key="maxID">780</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -7664,6 +7704,7 @@
 							<string>actionOpenMainWindow:</string>
 							<string>actionOpenPlaylistWindow:</string>
 							<string>actionOpenPreferencesWindow:</string>
+							<string>actionOpenSyncWindow:</string>
 							<string>actionPause:</string>
 							<string>actionPlay:</string>
 							<string>actionPlayLoop:</string>
@@ -7679,6 +7720,7 @@
 						</object>
 						<object class="NSArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -7733,6 +7775,7 @@
 							<string>actionOpenMainWindow:</string>
 							<string>actionOpenPlaylistWindow:</string>
 							<string>actionOpenPreferencesWindow:</string>
+							<string>actionOpenSyncWindow:</string>
 							<string>actionPause:</string>
 							<string>actionPlay:</string>
 							<string>actionPlayLoop:</string>
@@ -7818,6 +7861,10 @@
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">actionOpenPreferencesWindow:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">actionOpenSyncWindow:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
